Test/errors/err_unique_fixed_array.cb
// `unique T* field[N]` is ACCEPTED since 2026-07-20: the synthesized destructor walks the
// array and releases every slot (EmitOwningUniqueArrayCleanup, shared with the array LOCAL
// path). Runtime coverage lives in Test/test_collection_leaks.cb.
struct Node { int v = 0; };
interface IS { int id(); };

struct Tree { unique Node* kids[8] = default; };

// An INTERFACE field is ACCEPTED since 2026-07-20 in both shapes: the synthesized destructor
// releases a boxed interface value through its vtable dtor slot (scalar and per array slot).
struct IfaceHolder { unique IS one = default; };
struct IfaceSlots { unique IS slots[4] = default; };

// A DOUBLE-indirection field is still rejected: the destructor deletes exactly one pointer,
// which cannot express freeing an outer block plus the pointees it holds.
expect_error("requires a single-indirection pointer type") {
    struct Bad { unique Node** kids = default; };
}

extern int main()
{
    return 0;
}
